; ModuleID = '/home/carl/AnghaBench/obs-studio/libobs/util/extr_platform.c_os_mbs_to_utf8_ptr.c'
source_filename = "/home/carl/AnghaBench/obs-studio/libobs/util/extr_platform.c_os_mbs_to_utf8_ptr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @os_mbs_to_utf8_ptr(i8* %0, i64 %1, i8** %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca i64, align 8
  %6 = alloca i8**, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i64, align 8
  %9 = alloca i32*, align 8
  %10 = alloca i64, align 8
  store i8* %0, i8** %4, align 8
  store i64 %1, i64* %5, align 8
  store i8** %2, i8*** %6, align 8
  store i8* null, i8** %7, align 8
  store i64 0, i64* %8, align 8
  %11 = load i8*, i8** %4, align 8
  %12 = icmp ne i8* %11, null
  br i1 %12, label %13, label %22

13:                                               ; preds = %3
  store i32* null, i32** %9, align 8
  %14 = load i8*, i8** %4, align 8
  %15 = load i64, i64* %5, align 8
  %16 = call i64 @os_mbs_to_wcs_ptr(i8* %14, i64 %15, i32** %9)
  store i64 %16, i64* %10, align 8
  %17 = load i32*, i32** %9, align 8
  %18 = load i64, i64* %10, align 8
  %19 = call i64 @os_wcs_to_utf8_ptr(i32* %17, i64 %18, i8** %7)
  store i64 %19, i64* %8, align 8
  %20 = load i32*, i32** %9, align 8
  %21 = call i32 @bfree(i32* %20)
  br label %22

22:                                               ; preds = %13, %3
  %23 = load i8*, i8** %7, align 8
  %24 = load i8**, i8*** %6, align 8
  store i8* %23, i8** %24, align 8
  %25 = load i64, i64* %8, align 8
  ret i64 %25
}

declare dso_local i64 @os_mbs_to_wcs_ptr(i8*, i64, i32**) #1

declare dso_local i64 @os_wcs_to_utf8_ptr(i32*, i64, i8**) #1

declare dso_local i32 @bfree(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
